# remote_orb_slam2

./: CMakeLists.txt  README.md  build.sh  build_ros_compress.sh
Examples/Monocular/: mono_tum.cc
Examples/ROS/compression/: CMakeLists.txt  manifest.xml
Examples/ROS/compression/msg/: msg_features.msg  msg_feedback.msg
Examples/ROS/compression/src/compression/: Receiver_TUM.cpp  Sender_TUM.cpp
Examples/Stereo/: stereo_euroc.cc
include/: Frame.h  FrameInfo.h  System.h  Tracking.h
src/: Frame.cc  KeyFrame.cc  ORBmatcher.cc  System.cc  Tracking.cc  Viewer.cc
